--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="flex-container" id="flex-container">
-        <div class="flex-item">Item 1</div>
-        <div class="flex-item">Item 2</div>
-        <div class="flex-item">Item 3</div>
+        <div class="flex-item" id="item1">Item 1</div>
+        <div class="flex-item" id="item2">Item 2</div>
+        <div class="flex-item" id="item3">Item 3</div>
     </div>
 
     <div class="controls">
@@ -37,6 +37,22 @@
             <button onclick="setAlignItems('center')">Center</button>
             <button onclick="setAlignItems('baseline')">Baseline</button>
         </div>
+
+        <div class="control-group">
+            <label for="gap">Gap:</label>
+            <input type="number" id="gap" name="gap" min="0" value="10" onchange="setGap()">
+        </div>
+
+        <div class="control-group">
+            <label for="item1-grow">Item 1 Grow:</label>
+            <input type="number" id="item1-grow" name="item1-grow" min="0" value="1" onchange="setFlexGrow(1)">
+            <label for="item2-grow">Item 2 Grow:</label>
+            <input type="number" id="item2-grow" name="item2-grow" min="0" value="1" onchange="setFlexGrow(2)">
+            <label for="item3-grow">Item 3 Grow:</label>
+            <input type="number" id="item3-grow" name="item3-grow" min="0" value="1" onchange="setFlexGrow(3)">
+        </div>
+
+        <button onclick="resetFlexbox()">Reset</button>
     </div>
 
     <script src="script.js"></script>
